--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+div.remirror-theme .ProseMirror {
+  min-height: auto;
+  padding: 0px 10px;
+  box-shadow: none;
+  border-radius: 0;
+  overflow: visible;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.remirror-theme .ProseMirror:focus,
+div.remirror-theme .ProseMirror:active {
+    box-shadow: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.remirror-floating-popover {
+    z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.remirror-theme  {
+    margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remirror-theme .remirror-editor-wrapper {
+    padding: 0;
 }
