--- a/src/Editor/Editor.module.css
+++ b/src/Editor/Editor.module.css
@@ -1,6 +1,8 @@
 .editableBlockContainer {
   margin: 0 0 15px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 5% 95%;
+  grid-column-gap: 10px;
   align-items: flex-start;
 }
 
