--- a/src/Editor/Editor.module.css
+++ b/src/Editor/Editor.module.css
@@ -1,7 +1,7 @@
 .editableBlockContainer {
   margin: 0 0 15px;
   display: grid;
-  grid-template-columns: 5% 95%;
+  grid-template-columns: 10% 90%;
   grid-column-gap: 10px;
   align-items: flex-start;
 }
@@ -39,4 +39,8 @@ svg.addBlockIcon:hover {
 
 svg.removeBlockIcon:hover {
   color: #f00;
+}
+
+svg.moveIcon:hover {
+  cursor: move;
 }
