--- a/src/Editor/MediaBlocks/Bookmark/_.module.css
+++ b/src/Editor/MediaBlocks/Bookmark/_.module.css
@@ -1,4 +1,4 @@
-.audioActionSection {
+.bookmarkActionSection {
   padding: 10px;
   background: #f5f5f5;
 }
@@ -14,16 +14,14 @@
 }
 
 .header li {
-  margin: 0 10px 0 0;
+  margin: 0;
   font-size: 13px;
   padding: 0px 5px 5px;
   cursor: pointer;
-  color: #808080;
 }
 
 .header li.active {
   border-bottom: 1px solid #000;
-  color: #000;
 }
 
 .body {
@@ -48,6 +46,39 @@
   color: #808080;
 }
 
-.audioPreview {
+.bookmarkPreview {
   width: 100%;
+  padding: 15px;
+  border: 1px solid #f5f5f5;
+  border-radius: 3px;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  align-items: stretch;
+  text-decoration: none;
+  color: #000;
+}
+
+.bookmarkPreview:hover {
+  border: 1px solid #7b77ee;
+  transition: all 0.3s;
+}
+
+.bookmarkPreview img {
+  width: 100%;
+}
+
+.bookmarkInfo h3 {
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+
+.bookmarkInfo p {
+  margin-bottom: 5px;
+  color: #808080;
+  font-size: 13px;
+}
+
+.bookmarkInfo span {
+  font-size: 12px;
+  color: #7b77ee;
 }
