--- a/src/Editor/MediaBlocks/Video/_.module.css
+++ b/src/Editor/MediaBlocks/Video/_.module.css
@@ -14,14 +14,16 @@
 }
 
 .header li {
-  margin: 0;
+  margin: 0 10px 0 0;
   font-size: 13px;
   padding: 0px 5px 5px;
   cursor: pointer;
+  color: #808080;
 }
 
 .header li.active {
   border-bottom: 1px solid #000;
+  color: #000;
 }
 
 .body {
