--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -58,7 +58,7 @@
     --other--colors-dark-mode---violet: #7c69b5;
     --other--colors-dark-mode---yellow: #e4d176;
     --primary---main-200: #ebfef5;
-    --primary---main-500: #3cc68a;
+    --primary---main-500: #ff4d56;
     --primary-dark-mode---main-200: #ebfef5;
     --primary-dark-mode---main-500: #3cc68a;
     --secondary---main-200: #e9bacf;
