cover photo styling changed

--- a/src/ui/CoverUploader/CoverUploader.module.css
+++ b/src/ui/CoverUploader/CoverUploader.module.css
@@ -3,6 +3,7 @@
   padding-bottom: 20%;
   position: relative;
   background-color: var(--border---light);
+  border-radius: 0px 0px 15px 15px;
 }
 
 .updateCoverUploader {
