--- a/src/Editor/MediaBlocks/Bookmark/_.module.css
+++ b/src/Editor/MediaBlocks/Bookmark/_.module.css
@@ -1,6 +1,34 @@
+.mediaBlockContainer {
+  position: relative;
+}
+
 .bookmarkActionSection {
   padding: 10px;
   background: #f5f5f5;
+  border: 1px solid var(--border----dark);
+  border-top: none;
+  position: absolute;
+  min-width: 350px;
+  transform: translate(50%, 0);
+  z-index: 1;
+}
+
+.emptyMediaBlockContainer {
+  padding: 10px;
+  background-color: var(--neutral-dark-mode---text2);
+  color: #808080;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: all ease-in-out .1s;
+}
+
+.emptyMediaBlockContainer:hover {
+  background-color: var(--border----dark);
+}
+
+.emptyMediaBlockContainer p {
+  margin: 0 0 0 10px;
 }
 
 .header ul {
