--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,23 @@ div.remirror-floating-popover button:hover {
   font-size: 16px;
   line-height: 24px;
 }
+
+.ant-upload.ant-upload-drag {
+  border: none;
+  background: none;
+}
+
+.hide {
+  display: none;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.actionButtons {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+}
